[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/img/pack-burning-demon/effects/rock small/rocksmall_2.png" type="Texture" id=1]
[ext_resource path="res://assets/img/pack-burning-demon/effects/rock big/rockbig_2.png" type="Texture" id=2]
[ext_resource path="res://assets/img/pack-burning-demon/effects/rock big/rockbig_4.png" type="Texture" id=3]
[ext_resource path="res://assets/img/pack-burning-demon/effects/rock big/rockbig_3.png" type="Texture" id=4]
[ext_resource path="res://assets/img/pack-burning-demon/effects/rock big/rockbig_1.png" type="Texture" id=5]
[ext_resource path="res://src/environment/traps/Trap.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="Trap" type="Area2D"]
position = Vector2( -1, 1 )
script = ExtResource( 6 )
dps = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="rockbig_1" type="Sprite" parent="CollisionShape2D"]
position = Vector2( -32, -40 )
texture = ExtResource( 5 )

[node name="rockbig_6" type="Sprite" parent="CollisionShape2D/rockbig_1"]
position = Vector2( 80, -8 )
texture = ExtResource( 3 )

[node name="rockbig_3" type="Sprite" parent="CollisionShape2D/rockbig_1"]
position = Vector2( 16, 40 )
texture = ExtResource( 4 )

[node name="rockbig_4" type="Sprite" parent="CollisionShape2D/rockbig_1"]
position = Vector2( 56, 64 )
texture = ExtResource( 3 )

[node name="rockbig_5" type="Sprite" parent="CollisionShape2D/rockbig_1"]
position = Vector2( 56, 24 )
texture = ExtResource( 4 )

[node name="rockbig_2" type="Sprite" parent="CollisionShape2D/rockbig_1"]
position = Vector2( 24, -16 )
texture = ExtResource( 2 )

[node name="rocksmall_2" type="Sprite" parent="CollisionShape2D/rockbig_1"]
position = Vector2( -8, 72 )
texture = ExtResource( 1 )

[node name="rocksmall_3" type="Sprite" parent="CollisionShape2D/rockbig_1"]
position = Vector2( 88, 72 )
rotation = 0.304148
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
